--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .repo-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        .repo-list li {
+            margin-bottom: 10px;
+        }
+        .repo-list a {
+            color: #0366d6;
+            text-decoration: none;
+        }
+        .repo-list a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to My GitHub Page</h1>
+        <p>Hi there! I'm a passionate developer working on various projects. Here's a quick introduction to my work and some of my repositories.</p>
+        
+        <h2>My Repositories</h2>
+        <ul class="repo-list">
+            <li><a href="https://github.com/redheadmann/chess.git">Chess</a> - Chess web game, made with Java</li>
+            <li><a href="https://github.com/oescoba2/Vol4FallProj.git">Breast Cancer</a> - Breast cancer model</li>
+            <li><a href="https://github.com/sabmel/vol3_final_project.git">Football HMM</a> - Predicting football game 2nd half from the 1st half</li>
+        </ul>
+    </div>
+</body>
+</html>
+
